# timeseries-db

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  diplomska.cabal  docker-compose.yml  hie.yaml  package.yaml  stack.yaml  timeseries-db.cabal
app/: Main.hs
client/: CHANGELOG.md  Dockerfile  GenerateElm.hs  client.cabal  default.nix  elm.json
client/app/: Main.hs
client/src/: Api.elm  Main.elm  Styles.elm
common/: Api.hs  Model.hs  common.cabal  default.nix  hie.yaml  shell.nix
helpers/: generateTS.hs
helpers/RT/: RadixTree.hs  temp.hs
server/: README.md  cabal.project  default.nix  diplomska.cabal  hie.yaml  server.cabal  shell.nix
server/src/: Aggregates.hs  Api.hs  ApiHandlers.hs  App.hs
server/src/DataS/: DList.hs  HashMap.hs  IntMap.hs
server/src/Repository/: Handlers.hs  Model.hs  Queries.hs  Utils.hs
server/src/Repository/Queries/: Shared.hs  TS.hs  Tag.hs  Utils.hs
server/src/helpers/: generateTS.hs
server/src/helpers/RT/: RadixTree.hs
src/: Aggregates.hs  Api.hs  App.hs  IntMap.hs  Lib.hs  Map.hs
src/DataS/: DList.hs  HashMap.hs  IntMap.hs  Map.hs
src/Repository/: Handlers.hs  Model.hs  Queries.hs  Utils.hs
src/Repository/Queries/: General.hs  Shared.hs  TS.hs  Tag.hs
src/helpers/: generateTS.hs
src/helpers/RT/: RadixTreeBits.hs  temp.hs
