cabal-version:      2.4
name:               common
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adrian Cholak
maintainer:         adrian.colak@eriden.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules: 
      Model
    , Api
  build-depends:    
      base ^>=4.14.1.0
    , lens
    , text
    , scientific
    , safecopy
    , hashable
    , mtl
    , aeson
    , servant
  default-language: Haskell2010
